fixed overlap

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,7 +1,6 @@
 .bigSidebar
 {
   display : flex;
-  width: 15%;
 }
 
 .vscode-sidebar {
@@ -53,7 +52,7 @@
   }
 
 .sidebar-divider {
-  width: 100%;
+  width: 15em;
   height: 95vh;
   background-color: #1e1f2b;
 } 
@@ -62,7 +61,6 @@
   color: #e1e4e8;
   font-weight: 300;
   text-transform: uppercase;
-  width: 18vw;
   text-align: left;
   padding: .5rem .75rem;
   font-size: 1.2rem;
@@ -74,7 +72,6 @@
   background-color: #1e1f2b;
   font-weight: 300;
   text-transform: lowercase;
-  width: 18vw;
   text-align: left;
   padding: .5rem .75rem;
   font-size: 1rem;
